# metal-graph

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  Package.swift  README.md  pyproject.toml
artifacts/phase10_external_metal_storage/: results.json
artifacts/phase11_mlx_zero_copy/: environment.json  manifest.json  report.md  results.json
artifacts/phase7_mlx_interop/: environment.json  manifest.json  report.md  results.json  skip_or_unsupported.json
artifacts/phase8_python_adapter_ergonomics/: environment.json  manifest.json  report.md  results.json
artifacts/phase9_interop_diagnostics/: environment.json  manifest.json  report.md  results.json
bindings/python/: README.md
bindings/python/metal_graph/: __init__.py
bindings/rust/: README.md
bindings/swift/: README.md
docs/: architecture.md  metal_graph_api_spec_v0.md  open_questions.md
docs/phases/: phase-0-raw-metal-dispatch-graph.md  phase-1-copy-fill-events-barriers.md  phase-10-external-metal-storage.md  phase-11-mlx-zero-copy-completion.md  phase-2-memory-arenas-heaps.md  phase-3-patch-update-semantics.md  phase-4-icb-optimization.md  phase-5-mpsgraph-node.md  phase-6-mlx-python-adapter.md  phase-7-mlx-zero-copy.md  phase-8-python-adapter-ergonomics.md  phase-9-interop-diagnostics.md
examples/python/: basic_replay.py  explicit_copy_buffer.py  interop_diagnostics.py  mlx_unsupported_status.py
include/: module.modulemap
include/metal_graph/: metal_graph.h  metal_graph_metal.h
src/: metal_graph.c
src/core/: arena.c  buffer.c  error.c  graph.c  internal.h  patch.c  version.c
src/metal/: metal_backend.mm  unsupported_backend.c
src/shaders/: phase0_test_kernels.metal
tests/: smoke_test.c
tests/gpu/: metal_dispatch_test.c  metal_external_buffer_test.mm  mpsgraph_disabled_test.c  mpsgraph_node_test.mm
tests/python/: test_adapter.py  test_diagnostics.py  test_examples.py
tests/swift/: MetalGraphSwiftSmokeTests.swift
tests/unit/: graph_unit_test.c  public_header_cpp_test.cpp
