[project]
name = "metal-graph"
version = "0.1.0"
description = "Optional Python adapter for the Metal Graph C runtime"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["bindings/python"]
